--- a/src/App/styles/index.scss
+++ b/src/App/styles/index.scss
@@ -18,8 +18,11 @@ img {
   height: 100%;
   object-fit: cover;
   object-position: center;
+  cursor: pointer;
 }
-
+button{
+  cursor: pointer;
+}
 .cs-app{
   width: 100vw;
   height: 100vh;
@@ -65,10 +68,56 @@ img {
     flex: 3;
     display: flex;
     align-items: center;
+    label{
+      border: hidden;
+      background-color: white;
+      outline: none;
+      padding: 2em;
+      border-radius: 50%;
+      background-color: rgb(100, 21, 255);
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
     img {
       width: 2em;
       height: 2em;
       overflow: hidden;
     }
+  }
+  
+}
+.cs-icon-top{
+  width: 1em !important;
+  height: 1em !important;
+  overflow: hidden;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  cursor: pointer;
+}
+.cs-preview-img{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  img{
+    width: 18em;
+    height: 18em;
+    overflow: hidden;
+  }
+  button{
+    padding: 1em 2em;
+    margin-top: 1em;
+  }
+}
+.cs-history{
+  p{
+    padding: 1em;
+    margin: 1em;
+    border: 1px solid gray;
+    border-radius: 4px;
   }
 }
