--- a/src/App/styles/index.scss
+++ b/src/App/styles/index.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -20,10 +21,10 @@ img {
   object-position: center;
   cursor: pointer;
 }
-button{
+button {
   cursor: pointer;
 }
-.cs-app{
+.cs-app {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -68,7 +69,7 @@ button{
     flex: 3;
     display: flex;
     align-items: center;
-    label{
+    label {
       border: hidden;
       background-color: white;
       outline: none;
@@ -85,39 +86,102 @@ button{
       overflow: hidden;
     }
   }
-  
 }
-.cs-icon-top{
-  width: 1em !important;
-  height: 1em !important;
+.cs-icon-top {
+  width: 1.5em !important;
+  height: 1.5em !important;
   overflow: hidden;
   position: absolute;
   top: 1em;
   right: 1em;
   cursor: pointer;
 }
-.cs-preview-img{
+.cs-preview-img {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   align-items: center;
-  justify-content: center;
-  img{
-    width: 18em;
-    height: 18em;
+  justify-content: space-between;
+  img {
+    width: 20em;
+    height: 25em;
     overflow: hidden;
+    border-radius: 8px;
+    margin-top: 2em;
   }
-  button{
+  button {
     padding: 1em 2em;
     margin-top: 1em;
+    background-color: rgb(100, 21, 255);
+    color: white;
+    outline: none;
+    border: hidden;
+    border-radius: 8px;
+    font-size: 110%;
+    margin-bottom: 2em;
+    display: flex;
+    flex-direction: row;
+  }
+  button:disabled {
+    opacity: 0.5;
   }
 }
-.cs-history{
-  p{
+.cs-history {
+  p {
     padding: 1em;
     margin: 1em;
     border: 1px solid gray;
     border-radius: 4px;
+  }
+}
+.cs-view-result {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
+  overflow-y: scroll;
+  .cs-bar {
+    width: 100%;
+    .cs-bar-item:first-child{
+      opacity: 1;
+    }
+    .cs-bar-item {
+      background-color: rgb(100, 21, 255);
+      opacity: 0.5;
+      color: white;
+      outline: none;
+      border: hidden;
+      font-size: 110%;
+      padding: 1em;
+    }
+    
+    .cs-bar-item:hover,
+    :active {
+      opacity: 1;
+    }
+  }
+  .cs-result-text{
+    padding: 1em;
+  }
+}
+.loader {
+  margin-left: 8px;
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
